# MLGAQP

./: .gitignore  README-ch.md  README.md
cProject/: CMakeLists.txt  README.md
cProject/driver/: subgraph-cardinality-estimation.cc
cProject/lib/: results_summary_run_1.csv
cProject/lib/Base/: Base.h  BasicAlgorithms.h  Metrics.h  Timer.h
cProject/lib/DataStructure/: Graph.h
cProject/lib/SpecialSubgraphs/: SmallCycle.h
cProject/lib/SubgraphCounting/: CandidateGraphSampling.h  CandidateTreeSampling.h  CardinalityEstimation.h  Option.h  OracleManager.h
cProject/lib/SubgraphMatching/: CandidateFilter.h  CandidateSpace.h  DataGraph.h  PatternGraph.h
datasets/amazon/csv_data/: user.csv
datasets/amazon/data_graph/: core_nodes_config_count.json  core_nodes_config_sum.json  sum_nodes_config.json  user_custom_labels_count.txt  user_custom_labels_sum.txt  vertex_product.csv  vertex_review.csv  vertex_user.csv
datasets/amazon/ground_truth/: parler_ans_count.txt  parler_ans_sum.txt
datasets/amazon/query_graph_count/: query_3_1.graph  query_3_100.graph  query_3_104.graph  query_3_106.graph  query_3_107.graph  query_3_108.graph  query_3_11.graph  query_3_112.graph  query_3_113.graph  query_3_114.graph  query_3_115.graph  query_3_118.graph  query_3_119.graph  (+615 more)
pythonProject/: main.py
pythonProject/AI_Models/: classify_post.py
pythonProject/scripts/: run_experiments.sh
pythonProject/src/: DataImport.py  StratifiedSampler.py  __init__.py  abae_graph.py  algrithm_test.ipynb  exp_method_compare_and_parameter_tune.ipynb  static.ipynb  static_query_result.ipynb
(+725 files in other folders)
